--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,7 @@
 [core]
     editor = vim
     excludesfile = ~/.gitignore
+    abbrev = 12
 
 [color]
     ui = true
@@ -12,6 +13,11 @@
     br = branch
     d = diff
     recent = log -n 10
+    pr = pull --rebase
+    su = submodule update
+    cm = checkout master
+    sh = show --pretty="format:" --name-only
+    long = rev-parse
 
 [format]
     pretty = %Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset
@@ -20,3 +26,5 @@
 [log]
     abbrevCommit = true
 
+[push]
+    default = simple
