--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [core]
     editor = /usr/bin/vim
-    excludesfile = /Users/andrewyiu/.gitignore_global
+    excludesfile = /Users/ayiu/.gitignore_global
     abbrev = 12
 
 [color]
